@@ -1,0 +1,14 @@
+﻿namespace SmModManager.Graphics
+{
+
+    public partial class WnGameBackup
+    {
+
+        public WnGameBackup()
+        {
+            InitializeComponent();
+        }
+
+    }
+
+}
